# CharacterGenerator

./: .gitignore  Character.hs  CharacterGen.hs  CharacterGenerator.cabal  Generator.hs  Main.hs  TermColors.hs  chargen.cabal  main.hs  mkchar  stack.yaml  styx.yaml
Character/: Name.hs  Skills.hs  Traits.hs
chargen/: chargen.cabal
src/: CallHaskell.cs  Character.hs  Cli.hs  Generator.hs  Lib.hs  Main.hs  Preferences.hs  Stat.hs  TermColors.hs  Types.hs
src/Character/: Skill.hs
