name:                chargen
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/lboklin/CharacterGenerator#readme
license:             LGPL-3
license-file:        LICENSE
author:              Ludvig Böklin
maintainer:          ludvig.boklin@protonmail.com
copyright:           2017 Ludvig Böklin
category:            experimental,game,tools
build-type:          library
extra-source-files:  README.md
cabal-version:       >=1.10

library 
  hs-source-dirs:      src
  exposed-modules:     Lib,
                       Main,
                       Character,
                       Generator,
                       Cli
  build-depends:       base >= 4.7 && < 5,
                       random
  default-language:    Haskell2010
  ghc-options:         -dynamic -shared -fPIC

source-repository head
  type:     git
  location: https://github.com/lboklin/CharacterGenerator
